public/stylesheet/stylesheet.css
body.bkgd-image {
  background: url('../images/marble.png');
  background-size: cover;
}

/* ////////// FORM STYLING //////////*/
@import url(http://fonts.googleapis.com/css?family=Roboto:400);
body {
  background-color:#fff;
  -webkit-font-smoothing: antialiased;
  font: normal 14px Roboto,arial,sans-serif;
}

.container.form {
    padding: 25px;
    position: fixed;
}

#login {
  text-align: center;
}
.form-all {
    background-color: #EDEDED;
    padding-top: 10px;
    padding-bottom: 20px;
    padding-left: 20px;
    padding-right: 20px;
    border-radius: 15px;
    border-color:#d2d2d2;
    border-width: 5px;
    box-shadow:0 1px 0 #cfcfcf;
}

h4 {
 border:0 solid #fff;
 border-bottom-width:1px;
 padding-bottom:10px;
 text-align: center;
}

.form-control {
    border-radius: 10px;
}

.wrapper {
    text-align: center;
}

.index-page {
  opacity: 0.75;

}

/* ABSOLUTE CENTER/RESPONSIVE FORM */
.Absolute-Center {
  margin: auto;
  position: absolute;
  top: 0; left: 0; bottom: 0; right: 0;
}

.Absolute-Center.is-Responsive {
  width: 50%;
  height: 50%;
  min-width: 200px;
  max-width: 400px;
  padding: 40px;
}


/* ////////// INPUT STYLNIG //////////*/
/* input[type=text] {
  width: 100%
  padding: 12px 20px;
  margin: 8px 0;
  box-sizing: border-box;
} */

/* ///////STYLING FLASH MESSAGES ///////*/
div.flash-message {
  background-color: #66ff99;
  padding-top: 10px;
  padding-bottom: 10px;
  position: fixed;
  text-align: center;
}

